--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.1",
-        "tailwindcss": "^3.4.17",
-        "vite": "^6.0.11"
+        "tailwindcss": "^3.4.17"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.1"
+        "@tailwindcss/vite": "^4.0.1",
+        "alpinejs": "^3.14.8",
+        "esbuild": "^0.25.0",
+        "laravel-vite-plugin": "^1.2.0",
+        "vite": "^6.1.1"
     }
 }
