--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         "php": "^8.2",
         "bluerhinos/phpmqtt": "^1.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "php-mqtt/client": "^2.2",
+        "php-mqtt/laravel-client": "^1.6",
+        "react/event-loop": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
